spiceparser/eqn.h

typedef struct eqntoken_st
{
  itemop_t op;
  union lit_val_un
  {
    eqntokenlit_t lit;
    eqntokenval_t val;
    eqntokenpval_t pval;
  }z;
}eqntoken_t;
typedef struct eqn_st
{
#ifdef NO_EQUATIONS
  float val;
#else
  eqntoken_t *eqn;  
#endif
}eqn_t;