spiceparser/netlist_lib.h

/* convenience structures */
typedef struct nlibiodef_st
{
  char *encoding;
  int wires;
  int tokens;
  int digitize;
}nlibiodef_t;
/* input definition */
typedef struct nlibio_st
{
  int   tokens;
  int   qnodes;
  int   digitize;
  int   nodes[NLIBIO_MAXNODES];
}nlibio_t;
typedef struct nlibiol_st
{
  list_t iol;
  int qtokens; /* product (iol[k].tokens) */
}nlibiol_t;
/* parameter range */
typedef struct nlibpm_st 
{
  int index; /* index into netlist parameter list */
  float min, max;
  int qty;
}nlibpm_t;
typedef struct nlibfunc_st
{
  int p_delay;    /* phases of delay before we begin computations     */
  int p_cycle;    /* phases per cycle (compute each n phases)         */
  int p_offset;   /*  phases between inputs sampled and outputs valid */
  int qin;
  int qout;
  int map[2]; /* alloc in place, size = qin*sizeof(int) */  
}nlibfunc_t;
/* function reference */
typedef struct nlibfref_st
{
  int index;
}nlibfref_t;
/* reference nodes and associated skew parameters */
typedef enum nlibreftype_en
{
  RTrseries=0,
  RTcshunt=1,
  RTdelay=2,
  RTqty
}nlibreftype_t;
typedef struct nlibrefnode_st
{
  eqn_t skew[MAXSKEW_PARAMS]; /* RTxxx indices */
  int vrefi;  /* index into vref structure */
  int devnodei; /* node index in netlist */
}nlibrefnode_t;
/* database object */
typedef struct nlibdb_st
{
  netlist_t *nl;
  nlibiol_t in,out;
  nlibfref_t map; /* mapping between input and output tokens */
  list_t params;
  list_t refnodes; 
  float *pvals;
}nlibdb_t;
typedef struct nlibflatdb_st
{
  int lib_index;  /* index from process */
  int db_index;  /* index into db list */
  int qvals; /* cache db->params.q */
  float *pvals; /* copy db pvals to here */
  list_t uservals;  /* array of user gate physical parameters */
}nlibflatdb_t;