spiceparser/netlist.h

struct extract_st;
struct spice_st;
typedef struct geninput_st
{
  int magic;
  int other[4];
}geninput_t;
/* internal definition of netlist type */
typedef union netlist_input_un
{
  void *p;
  geninput_t *generic;
  struct spice_st *spice;
  struct extract_st *ext;
}netlist_input_t;
typedef union dev_input_un
{
  void *p;
  struct m_st *spice_fet;
  struct c_st *spice_cap;
  void *spice_res;
  void *extract_fet;
  void *extract_cap;
  void *extract_res;
}dev_input_t;
typedef struct termptr_st
{
  unsigned devi:  TERMPTR_BITS_DEVI;
  unsigned nonnull: 1;
  unsigned termi: TERMPTR_BITS_TERMI;
  unsigned devt:  TERMPTR_BITS_DEVT;
}termptr_t;
/**** entities:  

      an entity_t describes and holds a list of devices 
      
      the flexible device structure is formatted as follows 
      {
      dev_input_t parent;
      termptr_t terms[e->qterms];
      eqn_t vals[e->qvals];
      rest....
      }

*****/

typedef struct entity_st
{
  list_t l;
  int qterms;   /* q terms of in generic structure */
  int qvals;    /* q values in generic structure   */
  int qcount;   /* counted number, low level       */
  int id;       /* uniq device id                  */
  int qother;   /* bytes of other info in dev structure */
  char sym[8];  /* symbolic name                   */
}entity_t;
typedef struct devnode_st
{
  dev_input_t parent;
  termptr_t n[DEVT_NODE_TERMS];
}devnode_t;
typedef struct netlist_st
{
  netlist_input_t input; /* where the netlist came from                   */
  void *eqn_mem; /* where we store our equations */
  int iscopy;   /* this is set if we shouldn't free/modify some structures */
  names_t *names; /* key off of node indices                              */
  eqnlist_t eqnl;
  int qe; /* valid entities */
  entity_t e[TERMPTR_MAX_DEVT];  
}netlist_t;
typedef struct netlistfunc_st
{
  netlist_t *nl;
  entity_t *entity;

  /* for merge */
  int qcmp;
  int (*sum)(struct netlistfunc_st *nm,int ia, int ib);
  void (*tocompare)(struct netlistfunc_st *nm, int index, void *data);

  /* for distribute */
  int qproperties;
  void (*accumulate)(struct netlistfunc_st *nm, int devi, int termi, float *nodeprops);
  void (*distribute)(struct netlistfunc_st *nm, int devi, int termi, float *nodeprops);
  
  /* for fixup */
  void (*fixup)(struct netlistfunc_st *nm, termptr_t t);

}netlistfunc_t;