spiceparser/spiceparser.py


# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 98
class struct_devfet_st(Structure):
    pass

struct_devfet_st.__slots__ = [
    'parent',
    'n',
    'v',
    'type',
]
struct_devfet_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * 4),
    ('v', eqn_t * 6),
    ('type', c_uint),
]

devfet_t = struct_devfet_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 98

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 106
class struct_devcap_st(Structure):
    pass

struct_devcap_st.__slots__ = [
    'parent',
    'n',
    'v',
]
struct_devcap_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * 2),
    ('v', eqn_t * 1),
]

devcap_t = struct_devcap_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 106

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 114
class struct_devres_st(Structure):
    pass

struct_devres_st.__slots__ = [
    'parent',
    'n',
    'v',
]
struct_devres_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * 2),
    ('v', eqn_t * 1),
]

devres_t = struct_devres_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 114

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 122
class struct_devind_st(Structure):
    pass

struct_devind_st.__slots__ = [
    'parent',
    'n',
    'v',
]
struct_devind_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * 2),
    ('v', eqn_t * 1),
]

devind_t = struct_devind_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 122

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 130
class struct_devvsrc_st(Structure):
    pass

struct_devvsrc_st.__slots__ = [
    'parent',
    'n',
    'v',
]
struct_devvsrc_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * 2),
    ('v', eqn_t * 1),
]

devvsrc_t = struct_devvsrc_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 130

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 138
class struct_devisrc_st(Structure):
    pass

struct_devisrc_st.__slots__ = [
    'parent',
    'n',
    'v',
]
struct_devisrc_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * 2),
    ('v', eqn_t * 1),
]

devisrc_t = struct_devisrc_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 138

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 146
class struct_devdiode_st(Structure):
    pass

struct_devdiode_st.__slots__ = [
    'parent',
    'n',
    'v',
]
struct_devdiode_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * 2),
    ('v', eqn_t * 4),
]

devdiode_t = struct_devdiode_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 146

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 154
class struct_devbjt_st(Structure):
    pass

struct_devbjt_st.__slots__ = [
    'parent',
    'n',
    'v',
]
struct_devbjt_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * 4),
    ('v', eqn_t * 4),
]

devbjt_t = struct_devbjt_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 154

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 161
class struct_dev2term_st(Structure):
    pass

struct_dev2term_st.__slots__ = [
    'parent',
    'n',
    'v',
]
struct_dev2term_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * 2),
    ('v', eqn_t * 1),
]

dev2term_t = struct_dev2term_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 161

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 168
class struct_dev4term_st(Structure):
    pass

struct_dev4term_st.__slots__ = [
    'parent',
    'n',
    'v',
]
struct_dev4term_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * 4),
    ('v', eqn_t * 1),
]

dev4term_t = struct_dev4term_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 168

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 181
class union_devall_un(Union):
    pass

union_devall_un.__slots__ = [
    'p',
    'genp',
    'nodep',
    'fetp',
    'capp',
    'indp',
    'bjtp',
    'vsrcp',
    'isrcp',
]
union_devall_un._fields_ = [
    ('p', POINTER(None)),
    ('genp', POINTER(devgen_t)),
    ('nodep', POINTER(devnode_t)),
    ('fetp', POINTER(devfet_t)),
    ('capp', POINTER(devcap_t)),
    ('indp', POINTER(devind_t)),
    ('bjtp', POINTER(devbjt_t)),
    ('vsrcp', POINTER(devvsrc_t)),
    ('isrcp', POINTER(devisrc_t)),
]

devall_p = union_devall_un # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 181

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 194
if hasattr(_libs['spiceparser'], 'netlist_copyish'):
    netlist_copyish = _libs['spiceparser'].netlist_copyish
    netlist_copyish.argtypes = [POINTER(netlist_t), c_int, POINTER(c_int)]
    netlist_copyish.restype = POINTER(netlist_t)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 195
if hasattr(_libs['spiceparser'], 'netlist_o_spice'):
    netlist_o_spice = _libs['spiceparser'].netlist_o_spice
    netlist_o_spice.argtypes = [POINTER(None), POINTER(netlist_t), c_int]
    netlist_o_spice.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 196
if hasattr(_libs['spiceparser'], 'netlist_devnew_inplace'):
    netlist_devnew_inplace = _libs['spiceparser'].netlist_devnew_inplace
    netlist_devnew_inplace.argtypes = [netlist_input_t, c_int, c_int * 9]
    netlist_devnew_inplace.restype = POINTER(netlist_t)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 197
if hasattr(_libs['spiceparser'], 'netlist_devnew'):
    netlist_devnew = _libs['spiceparser'].netlist_devnew
    netlist_devnew.argtypes = [netlist_input_t]
    netlist_devnew.restype = POINTER(netlist_t)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 199
if hasattr(_libs['spiceparser'], 'netlist_devfet_funcs'):
    netlist_devfet_funcs = _libs['spiceparser'].netlist_devfet_funcs
    netlist_devfet_funcs.argtypes = [POINTER(netlist_t), POINTER(netlistfunc_t)]
    netlist_devfet_funcs.restype = POINTER(netlistfunc_t)

struct_extract_st.__slots__ = [
    'extract_magic',
    'root',
    'fname',
    'did_EF_init_read',
    'merged_list',
    'ext_argc',
    'ext_argv',
]
struct_extract_st._fields_ = [
    ('extract_magic', c_int),
    ('root', String),
    ('fname', String),
    ('did_EF_init_read', c_int),
    ('merged_list', POINTER(None)),
    ('ext_argc', c_int),
    ('ext_argv', POINTER(POINTER(c_char))),
]

extract_t = struct_extract_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_extract.h: 39

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 46
class struct_nlibiodef_st(Structure):
    pass

struct_nlibiodef_st.__slots__ = [
    'encoding',
    'wires',
    'tokens',
    'digitize',
]
struct_nlibiodef_st._fields_ = [
    ('encoding', String),
    ('wires', c_int),
    ('tokens', c_int),
    ('digitize', c_int),
]

nlibiodef_t = struct_nlibiodef_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 46

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 56
class struct_nlibio_st(Structure):
    pass

struct_nlibio_st.__slots__ = [
    'tokens',
    'qnodes',
    'digitize',
    'nodes',
]
struct_nlibio_st._fields_ = [
    ('tokens', c_int),
    ('qnodes', c_int),
    ('digitize', c_int),
    ('nodes', c_int * 4),
]

nlibio_t = struct_nlibio_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 56

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 62
class struct_nlibiol_st(Structure):
    pass

struct_nlibiol_st.__slots__ = [
    'iol',
    'qtokens',
]
struct_nlibiol_st._fields_ = [
    ('iol', list_t),
    ('qtokens', c_int),
]

nlibiol_t = struct_nlibiol_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 62

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 70
class struct_nlibpm_st(Structure):
    pass

struct_nlibpm_st.__slots__ = [
    'index',
    'min',
    'max',
    'qty',
]
struct_nlibpm_st._fields_ = [
    ('index', c_int),
    ('min', c_float),
    ('max', c_float),
    ('qty', c_int),
]

nlibpm_t = struct_nlibpm_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 70

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 80
class struct_nlibfunc_st(Structure):
    pass

struct_nlibfunc_st.__slots__ = [
    'p_delay',
    'p_cycle',
    'p_offset',
    'qin',
    'qout',
    'map',
]
struct_nlibfunc_st._fields_ = [
    ('p_delay', c_int),
    ('p_cycle', c_int),
    ('p_offset', c_int),
    ('qin', c_int),
    ('qout', c_int),
    ('map', c_int * 2),
]

nlibfunc_t = struct_nlibfunc_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 80

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 86
class struct_nlibfref_st(Structure):
    pass

struct_nlibfref_st.__slots__ = [
    'index',
]
struct_nlibfref_st._fields_ = [
    ('index', c_int),
]

nlibfref_t = struct_nlibfref_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 86

enum_nlibreftype_en = c_int # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 97

RTrseries = 0 # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 97

RTcshunt = 1 # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 97

RTdelay = 2 # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 97

RTqty = (RTdelay + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 97

nlibreftype_t = enum_nlibreftype_en # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 97

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 105
class struct_nlibrefnode_st(Structure):
    pass

struct_nlibrefnode_st.__slots__ = [
    'skew',
    'vrefi',
    'devnodei',
]
struct_nlibrefnode_st._fields_ = [
    ('skew', eqn_t * 3),
    ('vrefi', c_int),
    ('devnodei', c_int),
]

nlibrefnode_t = struct_nlibrefnode_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 105

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 116
class struct_nlibdb_st(Structure):
    pass

struct_nlibdb_st.__slots__ = [
    'nl',
    '_in',
    'out',
    'map',
    'params',
    'refnodes',
    'pvals',
]
struct_nlibdb_st._fields_ = [
    ('nl', POINTER(netlist_t)),
    ('_in', nlibiol_t),
    ('out', nlibiol_t),
    ('map', nlibfref_t),
    ('params', list_t),
    ('refnodes', list_t),
    ('pvals', POINTER(c_float)),
]

nlibdb_t = struct_nlibdb_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 116

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 126
class struct_nlibflatdb_st(Structure):
    pass

struct_nlibflatdb_st.__slots__ = [
    'lib_index',
    'db_index',
    'qvals',
    'pvals',
    'uservals',
]
struct_nlibflatdb_st._fields_ = [
    ('lib_index', c_int),
    ('db_index', c_int),
    ('qvals', c_int),
    ('pvals', POINTER(c_float)),
    ('uservals', list_t),
]

nlibflatdb_t = struct_nlibflatdb_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 126

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 142
class struct_nlib_st(Structure):
    pass
